--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-circular-progress": "^1.4.1",
+    "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
