--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
   },
   "dependencies": {
     "@expo-google-fonts/urbanist": "^0.4.1",
+    "@react-native-community/datetimepicker": "8.4.1",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-circular-progress": "^1.4.1",
+    "react-native-currency-input": "^1.1.1",
+    "react-native-gifted-charts": "^1.4.63",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-worklets": "^0.4.1"
+    "react-native-worklets": "^0.4.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
