--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-worklets": "^0.4.1",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "expo-sqlite": "15.2.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
