--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
+    "expo-sqlite": "15.2.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-blurhash": "^2.1.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-currency-input": "^1.1.1",
     "react-native-gifted-charts": "^1.4.63",
@@ -30,8 +32,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-worklets": "^0.4.1",
-    "zustand": "^5.0.7",
-    "expo-sqlite": "15.2.10"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
