--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/urbanist": "^0.4.1",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-navigation/drawer": "^7.5.7",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -25,13 +27,13 @@
     "react-native-blurhash": "^2.1.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-currency-input": "^1.1.1",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-charts": "^1.4.63",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "^4.0.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-worklets": "^0.4.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
