--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@expo-google-fonts/urbanist": "^0.4.1",
     "@react-native-community/datetimepicker": "8.4.1",
-    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/drawer": "^7.3.9",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.20",
+    "expo": "~53.0.23",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-sqlite": "15.2.10",
+    "expo-router": "~5.1.7",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -34,8 +35,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "zustand": "^5.0.7",
-    "expo-crypto": "~14.1.5"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
