--- a/package.json
+++ b/package.json
@@ -10,37 +10,39 @@
   },
   "dependencies": {
     "@expo-google-fonts/urbanist": "^0.4.1",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/drawer": "^7.3.9",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.23",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
-    "expo-font": "~13.3.2",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.7",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "expo": "^54.0.11",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
+    "expo-font": "~14.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.9",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-blurhash": "^2.1.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-currency-input": "^1.1.1",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.63",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "^0.6.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "^19.1.16",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
